Updated "Task 4" after Pasha's review.